demo_project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-imuto-ai
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - sso.imuto.ai
      secretName: sso-tls
  rules:
    - host: sso.imuto.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sso
                port:
                  number: 80
